wp-content/themes/goodnews5/css/main.css
/* ... */
.topbar .top-nav > li ul.sub-menu li a:hover {
    background: #373c43;
}
.topbar .top-nav > li ul.sub-menu li.has-child > a:after {
        content: '\e6d4';
	font-family: 'enotype';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
        font-size: 16px;
        position: absolute;
        right: 5px;
        top: 50%;
        margin-top: -5px;
        line-height: 9px;
        color: #f0f0f0 ;
}
.topbar .search-form {
    width: 226px;
    padding: 5px 0;

}
.topbar .search-form * {
    height: 30px;
}
.topbar .search-form input {
    float: left;
    width: 180px;
    border: 0;
}
.topbar .search-form button {
    float: right;
    height: 30px;
    line-height: 30px;
}
.mom-social-icons {
           margin: 0;
       padding: 0;
       list-style: none;
}
.topbar .mom-social-icons li {
    margin-top: 5px;
}
.mom-social-icons li {
    float: left;
    margin-left: 1px;
}
.mom-social-icons li a {
    vertical-align: middle;
    line-height: 30px;
    display: block;
}
.mom-social-icons li a img {
    margin-right: 4px;
}
.mom-social-icons li a.vector_icon {
    background: #4a525d;
    width: 30px;
    height: 30px;
    display: block;
    text-align: center;
    line-height: 30px;
    font-size: 18px;
    color: #f0f0f0;
}
.mom-social-icons li a.vector_icon:hover {
    background-color: #f09217;
}
.mom-social-icons li a.vector_icon i {
    line-height: 33px;
}
.mom-social-icons li a:hover {
	color: #fff;
}
.mom-social-icons li.twitter a.vector_icon:hover  {
	background-color: #00baf0;
}
.mom-social-icons li.facebook a.vector_icon:hover {
	background-color: #3b5997;
}

.mom-social-icons li.gplus a.vector_icon:hover {
	background-color: #c43c2c;
}

.mom-social-icons li.linkedin a.vector_icon:hover {
	background-color: #006599;
}

.mom-social-icons li.youtube a.vector_icon:hover {
	background-color: #ff0000;
}

.mom-social-icons li.rss a.vector_icon:hover {
	background-color: #ff6600;
}

.mom-social-icons li.skype a.vector_icon:hover {
	background-color: #00b0f6;
}

.mom-social-icons li.feedburner a.vector_icon:hover {
	background-color: #ee3d43;
}

.mom-social-icons li.flickr a.vector_icon:hover {
	background-color: #ff0084;
}

.mom-social-icons li.picasa a.vector_icon:hover {
	background-color: #000;
}

.mom-social-icons li.vimeo a.vector_icon:hover {
	background-color: #1ab7ea;
}

/* ==========================================================================
 *                Header
   ========================================================================== */
.header {
    background: #fff;
    clear: both;
}
.header > .inner {
    height: 154px;
    line-height: 154px;
    position: relative;
}

.header .logo {
    float:  left;
        height: 154px;

}
.header .logo span {
    font-size: 30px;
    font-weight: bold;
    color: #373C43;
}
.header-right {
    float: right;
}
.header-right_custom-content {
    line-height: 1.7;
}
.header p {
    margin: 0;
}
/* ==========================================================================
 *                	Main Navigation
   ========================================================================== */
#navigation {
    background: #fff;
    border: 1px solid #dfdfdf;
    border-left: 0;
    border-right: 0;
    height: 50px;
    line-height: 44px;
    position: relative;
    z-index: 100;
    clear: both;
}
#navigation.nav_shadow_on {
    	-webkit-box-shadow: 3px 4px 5px rgba(0,0,0,.05); -moz-box-shadow: 3px 4px 5px rgba(0,0,0,.05); box-shadow: 3px 4px 5px rgba(0,0,0,.05);
}
#navigation.nov_white_off {
    height: 44px;
    background: 0;
}
#navigation.nov_white_off .main-menu > li.current-menu-item > a:before, #navigation.nov_white_off .main-menu > li.current-menu-ancestor > a:before {
    display:none;
}
body.sticky_navigation_on #navigation.sticky-nav {
    width: 100%;
    position: fixed;
-webkit-box-shadow: 0 0 4px 0 rgba(0,0,0,0.1);
box-shadow: 0 0 4px 0 rgba(0,0,0,0.1);
z-index: 500000;
}
body.sticky_navigation_on.layout-boxed #navigation.sticky-nav {
    width: 1022px;
}
body.sticky_navigation_on.layout-boxed.both-sidebars #navigation.sticky-nav {
    width: 1235px;
}
body.sticky_navigation_on.layout-boxed.layout-boxed-content #navigation.sticky-nav {
    width: 100% !important;
}

.navigation-inner {
    height: 44px;
    /*background: #f0f0f0;*/
    background: #373c43;
    border-bottom: 1px solid #dfdfdf;
    position: relative;
}
.navigation-inner > .inner {
    position: relative;
    height: 44px;
}
#navigation ul.main-menu {
    height: 44px;
    margin-right: 50px;
    /*display: block !important;*/
}
#navigation ul {
           margin: 0;
       padding: 0;
       list-style: none;
}

#navigation .main-menu li:not(.mom_mega) {
        position: relative;
}
#navigation .main-menu > li {
    float:  left;
    font-size: 15px;
    border: 0px solid #dfdfdf;
    border-left-width: 1px;
    white-space: nowrap;
    }
#navigation .main-menu > li:last-child {
    border-right: 1px solid #dfdfdf;
}
#navigation .main-menu > li > a {
    padding: 0 15px;
    /*color: #373c43;*/
    color: #fff;
    line-height: 44px;
    height: 44px;
    display: block;
}
#navigation .main-menu > li a {
    position: relative;
}
#navigation .main-menu > li:hover > a:before, #navigation .main-menu > li.current-menu-item > a:before, .navigation_highlight_ancestor #navigation .main-menu > li.current-menu-ancestor > a:before,  .navigation_highlight_ancestor #navigation .main-menu > li.current-menu-parent > a:before {
    content: '';
    position: absolute;
    width: 100%;
    height: 1px;
    background: #fff;
    left: 0;
    bottom: -1px;
}
/* ... */

